# mohit-portfolio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/data/: portfolio_data.py
app/models/: schemas.py
app/routers/: achievements.py  contact.py  projects.py
app/services/: email_service.py  rate_limiter.py
app/templates/: index.html
chatbot/: README.md  chatbot_engine.py  chatbot_widget.html  requirements.txt  server.py  test_chatbot.py
tests/: test_achievements.py  test_contact.py  test_projects.py  test_rate_limiter.py
