[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "mohit-portfolio"
version         = "3.0.0"
description     = "MOHIT.EXE — Portfolio OS v3.0 (FastAPI backend)"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode  = "auto"
testpaths     = ["tests"]
addopts       = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "I", "UP", "B", "SIM"]
ignore         = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]
